--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.2",
+    "jalali-react-datepicker": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hls-player": "^3.0.7",
     "react-scripts": "5.0.1",
+    "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
